# pico-midi-looper-ghost

./: CMakeLists.txt  README.md
.github/workflows/: build-firmware.yml  release.yml
docs/: looper_fsm.dot  serial-ui.html
drivers/: async_timer.c  ble_midi.c  ble_midi_noop.c  display.c  ghost_note.c  storage.c  usb_midi.c
include/: ghost_note.h  looper.h  note_scheduler.h  tap_tempo.h
include/drivers/: async_timer.h  display.h  led.h  storage.h
src/: ghost_note.c  looper.c  main.c  note_scheduler.c  tap_tempo.c
tools/: serial-ui.html
